eks-02-DynamicVolumeProvisionining-and-Ingress/ingress-lesson/account.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: account-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: account
  template: 
    metadata:
      labels:
        app: account
    spec:
      containers:
      - name: account-pod
        image: clarusway/clarusshop:account
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service   
metadata:
  name: account-svc
  labels:
    app: account
spec:
  type: NodePort  
  ports:
  - port: 80  
    targetPort: 80
    nodePort: 30002
  selector:
    app: account
