eks-02-DynamicVolumeProvisionining-and-Ingress/ingress-lesson/clarusshop-svc.yaml
apiVersion: v1
kind: Service   
metadata:
  name: clarusshop-svc
  labels:
    app: clarusshop
spec:
  type: NodePort  
  ports:
  - port: 80  
    targetPort: 80
    nodePort: 30001
  selector:
    app: clarusshop
