eks-02-DynamicVolumeProvisionining-and-Ingress/ingress-lesson/clarusshop.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: clarusshop-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: clarusshop 
  template: 
    metadata:
      labels:
        app: clarusshop
    spec:
      containers:
      - name: clarusshop-pod
        image: clarusway/clarusshop
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service   
metadata:
  name: clarusshop-svc
  labels:
    app: clarusshop
spec:
  type: NodePort  
  ports:
  - port: 80  
    targetPort: 80
    nodePort: 30001
  selector:
    app: clarusshop
